app/assets/stylesheets/application/modules/molecules/_post.scss
.m-post {
  margin-bottom: 50px;
  font-family: $body-font;
  line-height: 1.45;

  h1 {
    margin: 0 0 5px;
    padding-top: 10px;
    font-family: $header-font;
  }

  img {
    width: 100%;
    height: auto;
  }

  blockquote {
    margin: 0;
    background: $color-pale-blue;
    padding: 5px;
    font-family: $code-font;

    p,
    span {
      font-family: $code-font;
    }
  }
}

.m-post__meta {
  font-family: $header-font;
}

.m-post__author {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.m-post__author-photo {
  width: 44px;
  margin-right: 10px;

  img {
    border-radius: 50%;
    display: block;
  }
}

.m-post__meta-strip {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.m-post__content {
  margin-top: 40px;
  padding-bottom: 20px;

  img {
    padding: 20px;
  }

  a:hover {
    @include link-underline;
    transition: none;
    color: $color-blue;
  }
}

.m-post__excerpt {
  margin-top: 20px;
}

.m-post__images {
  @media #{$from-medium} {
    padding-left: 40px;
  }
}

